k8s/k8s.yaml
#=======================
# Namespace Definition
#=======================
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
# =======================
# Backend Deployment
# =======================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-backend
  template:
    metadata:
      labels:
        app: demo-backend
    spec:
      containers:
        - name: demo-backend
          image: demo-backend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000

            

---
# =======================
# Backend Service
# =======================
apiVersion: v1
kind: Service
metadata:
  name: demo-backend-service
  namespace: dev
spec:
  selector:
    app: demo-backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP

---
# =======================
# Frontend Deployment
# =======================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-frontend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-frontend
  template:
    metadata:
      labels:
        app: demo-frontend
    spec:
      containers:
        - name: demo-frontend
          image: demo-frontend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
# =======================
# Frontend Service
# =======================
apiVersion: v1
kind: Service
metadata:
  name: demo-frontend-service
  namespace: dev
spec:
  selector:
    app: demo-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: demo.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-frontend-service
                port:
                  number: 80
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: demo-backend-service
                port:
                  number: 5000
